tests/lean/123-2.lean.expected.out
123-2.lean:50:17: error: don't know how to synthesize placeholder
context:
R : Type,
_inst_6 : comm_ring R,
A : Type,
_inst_7 : comm_ring A,
_inst_8 : algebra' R A,
B : Type ?,
_inst_9 : comm_ring B,
_inst_10 : algebra' R B,
C : Type,
_inst_11 : comm_ring C,
_inst_12 : algebra' R C,
f : alg_hom' R A B,
hf : surjective ⇑f,
g : alg_hom' R A C,
hfg : ∀ (a : A), ⇑f a = 0 → ⇑g a = 0,
b : B
⊢ C
